faq-secondcolumn made the two columns on FAQ page come closer eachother in mobile format loggedin-alerts was not working in format 480px-767px so I fixed it kampanj-alert-mobile makes the kampanj-alert be closer to the other alert about subscription time, so there isn't a big gap

--- a/assets/stylesheets/app/app.css
+++ b/assets/stylesheets/app/app.css
@@ -457,8 +457,21 @@ Media queries
     position: absolute
   }
 
+  .kampanj-alert-mobile {
+    margin-top: 0px;
+  }
+
+  /* Makes the alert more centered */
+  .loggedin-alerts{
+    margin-right: 0px;
+  }
+
   .top-buffer {
     margin-top: 75px;
+  }
+
+  .faq-secondcolumn{
+    margin-top: 0px;
   }
 
 }
@@ -504,8 +517,22 @@ Media queries
     position: absolute
   }
 
+
+  .kampanj-alert-mobile {
+    margin-top: 0px;
+  }
+
+  /* Makes the alert more centered */
+  .loggedin-alerts{
+    margin-right: 0px;
+  }
+
   .top-buffer {
     margin-top: 75px;
+  }
+
+  .faq-secondcolumn{
+    margin-top: 0px;
   }
 
 }
@@ -569,6 +596,20 @@ Media queries
     position: relative;
   }
 
+  .kampanj-alert-mobile {
+    margin-top: 0px;
+  }
+
+  /* Makes the alert more centered */
+  .loggedin-alerts{
+    margin-right: 0px;
+  }
+
+
+  .faq-secondcolumn{
+    margin-top: 0px;
+  }
+
   .hero-unit h2 {
     line-height: 24px;
   }
@@ -625,6 +666,21 @@ Media queries
   .navbar-fixed-top,
   .navbar-fixed-bottom {
     position: relative;
+  }
+
+  .kampanj-alert-mobile {
+    margin-top: -30px;
+  }
+
+  /* Makes the alert more centered */
+  .loggedin-alerts{
+    margin-right: 15px;
+    margin-left: 15px;
+  }
+
+
+  .faq-secondcolumn{
+    margin-top: -75px;
   }
 
   .hero-unit h1 {
@@ -801,6 +857,20 @@ Media queries
     position: relative;
   }
 
+  .kampanj-alert-mobile {
+    margin-top: -30px;
+  }
+
+  /* Makes the alert more centered */
+  .loggedin-alerts{
+    margin-right: 15px;
+    margin-left: 0px;
+  }
+
+  .faq-secondcolumn{
+    margin-top: -75px;
+  }
+
   .trial-sticker {
     max-width: 30%;
   }
@@ -958,11 +1028,6 @@ Media queries
   margin-top: 30px;
 }
 
-/* Makes the alert more centered in mobile version, has almost no effect in desktop version */
-.loggedin-alerts{
-  margin-right: 15px;
-}
-
 .kampanj-alert {
   padding: 8px 35px 8px 14px;
   margin-bottom: 20px;
@@ -975,3 +1040,11 @@ Media queries
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
+}
+
+
+
+/* .faq-secondcolumn- Made the two columns when made into one, not have a separation  */
+/* .loggedin-alerts- was not working in format 480px-767px so I changed it  */
+/* .kampanj-alert-mobile- makes the kampanj-alert be closer to the other alert about subscription time, so there isn't a big gap  */
+
